<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@color/background">

    <!-- Logo -->
    <ImageView
        android:id="@+id/ivLogo_hud"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_food"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmail_hud"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail_hud"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_medium"
        android:background="@color/surface"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/ivLogo_hud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword_hud"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding_medium"
        android:background="@color/surface"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/etEmail_hud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin_hud"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/btn_login"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/etPassword_hud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Link -->
    <TextView
        android:id="@+id/tvRegister_hud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/btnLogin_hud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
