<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small"
    android:background="@color/background">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/ivProduct_hud"
        android:layout_width="@dimen/product_image_size"
        android:layout_height="@dimen/product_image_size"
        android:src="@drawable/ic_food"
        android:contentDescription="@string/product_image"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Product Name -->
    <TextView
        android:id="@+id/tvProductName_hud"
        style="@style/TextSubheader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name_placeholder"
        android:textColor="@color/textPrimary"
        android:layout_marginStart="@dimen/margin_medium"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/ivProduct_hud"
        app:layout_constraintTop_toTopOf="@id/ivProduct_hud"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Product Price -->
    <TextView
        android:id="@+id/tvProductPrice_hud"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_placeholder"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintStart_toEndOf="@id/ivProduct_hud"
        app:layout_constraintTop_toBottomOf="@id/tvProductName_hud"
        app:layout_constraintBottom_toBottomOf="@id/ivProduct_hud" />

</androidx.constraintlayout.widget.ConstraintLayout>
