<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    android:background="@color/background">

    <!-- Cart Header -->
    <TextView
        android:id="@+id/tvCartHeader_hud"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Cart Items RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart_hud"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@id/tvCartHeader_hud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vDivider_hud" />

    <!-- Divider -->
    <View
        android:id="@+id/vDivider_hud"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal_hud" />

    <!-- Total Price -->
    <TextView
        android:id="@+id/tvTotal_hud"
        style="@style/TextSubheader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textColor="@color/textPrimary"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDivider_hud" />

    <!-- Checkout Button -->
    <Button
        android:id="@+id/btnCheckout_hud"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/btn_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
